Bugfix: fix alignment of search box links

--- a/sites/all/themes/mcneese_www/css/screen/screen-www-common.css
+++ b/sites/all/themes/mcneese_www/css/screen/screen-www-common.css
@@ -165,21 +165,21 @@
   top: 8px;
   right: 20px;
 
-  width: 226px;
-  min-width: 226px;
-  max-width: 226px;
+  width: 225.1px;
+  min-width: 225.1px;
+  max-width: 225.1px;
   overflow: hidden;
 
-  height: 14px;
-  min-height: 14px;
-  max-height: 14px;
+  height: 18px;
+  min-height: 18px;
+  max-height: 18px;
 
   color: #ffffff;
   background-color: #023761;
 
   font-size: 10px;
   font-family: arial, helvetica, sans-serif;
-  line-height: 13px;
+  line-height: 14px;
 
   padding: 3px 3px 0 3px;
   border: 1px solid #065c9f;
